--- a/components/html/itinerary.html
+++ b/components/html/itinerary.html
@@ -1,5 +1,5 @@
 <section id="tour-itinerary" class="itinerary-section">
-    <h2>Caribbean Photo Walk Itinerary</h2>
+    <h2>Caye Caulker, Belize Photo Excursion Itinerary</h2>
     <p class="itinerary-time">6:30 AM - 10:30 AM</p>
     
     <div class="timeline">
