--- a/components/html/pricing.html
+++ b/components/html/pricing.html
@@ -41,8 +41,8 @@
         </div>
 
         <div class="cta-container">
-            <button class="cta-button">Reserve Your Spot Now</button>
-            <p class="spots-limited">Limited to 8 photographers per tour - Book early to secure your Caye Caulker adventure!</p>
+            <button class="cta-button" disabled>SOLD OUT</button>
+            <p class="spots-limited">Sign up above to receive our free Caye Caulker Island Photography Guide!</p>
         </div>
     </div>
 </section>
